# controllers/contextualplay.controller.js
@@ -2,10 +2,10 @@ const ContextualPlay = require('../models/contextualplay.model');
 exports.postPlayData = async (req, res, next) =>{
     let contextual_id = req.params.contextual_id;
     let played_at = req.body.played_at;
-    let device_id = device_id;
+    let device_id = req.body.device_id;
 
     let contextualPlay = new ContextualPlay(device_id, contextual_id, played_at);
-
+    console.log(contextualPlay);
     try{
         const [data, _] = await contextualPlay.save();
         return res.status(200).json(data);
