# models/contextualplay.model.js
@@ -8,6 +8,7 @@ class ContextualPlay{
     }
 
     save(){
+        console.log("Hello");
         let sql =`
         INSERT INTO ${database}(
             device_id,
@@ -17,17 +18,16 @@ class ContextualPlay{
         values(
             ${this.device_id},
             ${this.contextual_id},
-            ${this.played_at}
+            "${this.played_at}"
         )`;
+        console.log(sql);
         return db.execute(sql);
-
     }
 
     findAll(){
         let sql =`SELECT * FROM ${database}`;
         return db.execute(sql);
     }
-
     findById(contextual_id){
         let sql = `SELECT * FROM ${database} WHERE contextual_id = ${contextual_id}`;
         return db.execute(sql);
